--- a/style.css
+++ b/style.css
@@ -187,6 +187,15 @@ header .logo {
   background-color: #3483fa;
 }
 
+#mainImage,
+#lightbox img {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
+.fade-out {
+  opacity: 0;
+}
+
 /* Destaque oferta do dia */
 .oferta-dia {
   margin-top: 12px;
